2009-01-08  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.45.

2008-12-23  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getServerPPD): Fixed version
	check.
	(Connection_getDocument): Likewise.
	* cupsmodule.c (initcups): Likewise.

2008-12-23  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (PPD_localizeIPPReason): New method.
	(PPD_localizeMarkerName): Likewise.

2008-12-17  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_printTestPage): Look for
	"testprint" as well as "testprint.ps", as that is the name of the
	test page file in CUPS 1.4 (bug #476612).

2008-12-17  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_printTestPage): Only set a
	document-format attribute if one is specified.

2008-12-17  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_printTestPage): Avoid crash when
	given bad parameters.

2008-11-28  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.44.

2008-11-25  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getFile): Save thread state during
	call.
	(Connection_putFile): Likewise.
	(Connection_getDests): Likewise.
	(Connection_getDefault): Likewise.
	(Connection_getPPD): Likewise.
	(Connection_printFile): Likewise.
	(Connection_printFiles): Likewise.

2008-11-24  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_adminGetServerSettings): Save
	thread state during call.
	(Connection_adminSetServerSettings): Likewise.

2008-11-21  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.43.

2008-11-13  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_begin_allow_threads,
	Connection_end_allow_threads): Fix these functions so they
	actually work.

2008-11-13  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobs): Set printer-uri
	attribute instead of job-uri attribute.

2008-11-12  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection): Store thread state in Connection
	data.