@@ -1,3 +1,8 @@
+2009-03-10  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_getPrinterAttributes): The marker-*
+	attributes are lists.
+
 2009-01-08  Tim Waugh  <twaugh@redhat.com>
 
 	* Makefile: Version 1.9.45.
